@@ -124,6 +124,9 @@ CONF.SORT_N_GROUP_BY = CONF.N_MOD_GROUP_BY
 #CONF.LOG_LEVEL = :INFO
 ##CONF.LOG_IMPORT_NTIMES_POP = 10000
 CONF.LOG_IMPORT_NTIMES_POP = 100000
+##CONF.LOG_LOCAL_OUTPUT_DEV = $stderr
+#CONF.LOG_LOCAL_OUTPUT_DEV = $stdout
+#CONF.LOG_LOCAL_OUTPUT_DEV = nil
 
 ##  CONF.PROCESSOR_MON_ON = false
 ##  CONF.PROCESSOR_MON_INTERVAL = 60
