@@ -136,6 +136,7 @@ module Fairy
     def_prop :LOG_LEVEL
     def_prop :LOG_FLUSH_INTERVAL
     def_prop :LOG_IMPORT_NTIMES_POP
+    def_prop :LOG_LOCAL_OUTPUT_DEV 
 
     def_prop :PROCESSOR_MON_ON
     def_prop :PROCESSOR_MON_INTERVAL
@@ -299,6 +300,7 @@ module Fairy
   DEFAULT_CONF.LOG_FLUSH_INTERVAL = 1
   DEFAULT_CONF.LOG_LEVEL = :DEBUG
   DEFAULT_CONF.LOG_IMPORT_NTIMES_POP = 10000
+  DEFAULT_CONF.LOG_LOCAL_OUTPUT_DEV = $stderr
 
   DEFAULT_CONF.PROCESSOR_MON_ON = false
   DEFAULT_CONF.PROCESSOR_MON_INTERVAL = 60
